--- a/global.css
+++ b/global.css
@@ -16,7 +16,17 @@ body {
   --font-size-base-3: 15.3px;
   --font-size-smi-6: 12.6px;
   --font-size-mini-4: 14.4px;
+  --font-size-mid-5: 17.5px;
   --body-1-medium-size: 16px;
+  --font-size-smi-4: 12.4px;
+  --font-size-mini-2: 14.2px;
+  --font-size-mid-8: 17.8px;
+  --font-size-mini-8: 14.8px;
+  --font-size-base-2: 15.2px;
+  --font-size-sm-3: 13.3px;
+  --font-size-lgi: 19px;
+  --font-size-4xs-7: 8.7px;
+  --font-size-3xs: 10px;
 
   /* Colors */
   --grey-grey-10: #e9ebf8;
@@ -28,14 +38,30 @@ body {
   --grey-grey-700: #48505e;
   --grey-grey-800: #383e49;
   --color-dimgray: #666;
+  --color-lightslategray-100: #858ca1;
   --grey-grey-400: #858d9d;
   --primary-primary-400: #448df2;
+  --color-dodgerblue-100: #388cff;
   --color-gainsboro: #e6e6e6;
+  --gray-300: #d0d5dd;
   --color-lightgray: #d0d3d9;
+  --grey-grey-200: #b9bdc7;
   --color-silver: #b8babf;
   --primary-primary-800: #0c3e83;
+  --color-darkgray-100: #989fad;
+  --color-darkgray-200: #9d9d9d;
+  --color-peru: #e19133;
+  --success-success-600: #10a760;
+  --error-error-600: #da3e33;
+  --primary-primary-500: #1570ef;
+  --primary-primary-600: #1366d9;
+  --error-error-400: #f36960;
+  --color-mediumpurple: #845ebc;
 
   /* Gaps */
+  --gap-base: 16px;
+  --gap-3xs: 10px;
+  --gap-7xl: 26px;
   --gap-xl: 20px;
   --gap-10xs-6: 2.6px;
   --gap-4xs-8: 8.8px;
@@ -45,6 +71,30 @@ body {
   --gap-lg: 18px;
   --gap-2xs-8: 10.8px;
   --gap-sm-5: 13.5px;
+  --gap-17xl: 36px;
+  --gap-8xs-6: 4.6px;
+  --gap-6xs-7: 6.7px;
+  --gap-5xs-6: 7.6px;
+  --gap-5xs-1: 7.1px;
+  --gap-mid: 17px;
+  --gap-33xl: 52px;
+  --gap-2xs-7: 10.7px;
+  --gap-4xl-8: 23.8px;
+  --gap-39xl-9: 58.9px;
+  --gap-13xl-3: 32.3px;
+  --gap-8xl-3: 27.3px;
+  --gap-11xl-4: 30.4px;
+  --gap-base-9: 16.9px;
+  --gap-3xs-2: 9.2px;
+  --gap-2xs: 11px;
+  --gap-10xl-9: 29.9px;
+  --gap-lgi-9: 19.9px;
+  --gap-5xs-5: 7.5px;
+  --gap-mini-9: 14.9px;
+  --gap-5xl-5: 24.5px;
+  --gap-23xl-9: 42.9px;
+  --gap-14xl-2: 33.2px;
+  --gap-15xl: 34px;
 
   /* Paddings */
   --padding-mini: 15px;
@@ -62,25 +112,95 @@ body {
   --padding-lg: 18px;
   --padding-xs: 12px;
   --padding-xl: 20px;
+  --padding-10xs: 3px;
   --padding-mid-5: 17.5px;
   --padding-12xl: 31px;
   --padding-9xl: 28px;
   --padding-11xs-1: 1.1px;
   --padding-6xs-6: 6.6px;
+  --padding-sm: 14px;
   --padding-16xl: 35px;
   --padding-9xs: 4px;
+  --padding-12xs: 1px;
+  --padding-20xl: 39px;
   --padding-17xl: 36px;
+  --padding-7xs-9: 5.9px;
   --padding-10xs-5: 2.5px;
   --padding-8xl: 27px;
+  --padding-4xl: 23px;
   --padding-15xl: 34px;
   --padding-lg-1: 18.1px;
+  --padding-76xl: 95px;
+  --padding-73xl: 92px;
+  --padding-3xs-1: 9.1px;
+  --padding-mid-9: 17.9px;
+  --padding-4xs: 9px;
+  --padding-77xl: 96px;
+  --padding-63xl: 82px;
+  --padding-50xl: 69px;
   --padding-8xs-5: 4.5px;
+  --padding-sm-5: 13.5px;
+  --padding-5xl: 24px;
+  --padding-4xs-9: 8.9px;
+  --padding-mini-2: 14.2px;
+  --padding-3xl: 22px;
+  --padding-smi-4: 12.4px;
+  --padding-4xs-5: 8.5px;
+  --padding-7xs: 6px;
+  --padding-8xs: 5px;
+  --padding-19xl: 38px;
+  --padding-lgi: 19px;
+  --padding-8xs-4: 4.4px;
+  --padding-27xl: 46px;
+  --padding-base-9: 16.9px;
+  --padding-base-3: 16.3px;
+  --padding-40xl: 59px;
+  --padding-base-7: 15.7px;
+  --padding-base-6: 15.6px;
+  --padding-sm-8: 13.8px;
+  --padding-base-8: 16.8px;
+  --padding-47xl: 66px;
+  --padding-mid-7: 17.7px;
+  --padding-12xs-3: 0.3px;
+  --padding-26xl: 45px;
+  --padding-36xl: 55px;
+  --padding-72xl-5: 91.5px;
+  --padding-7xl: 26px;
+  --padding-6xl-6: 25.6px;
+  --padding-7xs-5: 5.5px;
+  --padding-15xl-2: 34.2px;
+  --padding-4xs-6: 8.6px;
+  --padding-5xs: 8px;
+  --padding-2xs-4: 10.4px;
+  --padding-3xs-5: 9.5px;
+  --padding-9xs-8: 3.8px;
+  --padding-sm-4: 13.4px;
+  --padding-8xs-7: 4.7px;
+  --padding-base-2: 15.2px;
+  --padding-10xs-8: 2.8px;
+  --padding-mid-4: 17.4px;
+  --padding-82xl-9: 101.9px;
+  --padding-6xs-2: 6.2px;
+  --padding-6xs-3: 6.3px;
+  --padding-6xs-1: 6.1px;
+  --padding-16xl-5: 35.5px;
+  --padding-10xl: 29px;
+  --padding-14xl: 33px;
 
   /* Border radiuses */
   --br-6xs-4: 6.4px;
   --br-2xs-3: 10.3px;
   --br-24xl-9: 43.9px;
   --br-8xs-4: 4.4px;
+  --br-5xs-2: 7.2px;
   --br-9xs-6: 3.6px;
   --br-4xs: 9px;
+  --br-5xs-1: 7.1px;
+  --br-6xs-9: 6.9px;
+  --br-3xs-5: 9.5px;
+  --br-9xs-8: 3.8px;
+  --br-5xs-6: 7.6px;
+  --br-8xs: 5px;
+  --br-10xs-5: 2.5px;
+  --br-6xs-2: 6.2px;
 }
